--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             background-color: white;
 
         }
-        .hello
+        
     </style>
 </head>
 
@@ -275,7 +275,7 @@
     <div class="container">
         <div class="topbar">
             <div class="intopbar">
-                <div class="portfolio"><img src="/img/hand.png" alt="cat" width="40" height="40"> Protfolio</div>
+                <div class="portfolio"><img src="./img/hand.png" alt="cat" width="40" height="40"> Protfolio</div>
                 <div class="goto">
                     <a href="./index.html" style="text-decoration: none;" class="a">
                         <div class="goto1">Home</div>
