--- a/certificate.html
+++ b/certificate.html
@@ -9,12 +9,12 @@
         /*font*/
         @font-face {
             font-family: beyonders;
-            src: url(/font/Beyonders.ttf);
+            src: url(./font/Beyonders.ttf);
         }
 
         @font-face {
             font-family: HFWhale;
-            src: url(/font/HFWhale.ttf);
+            src: url(./font/HFWhale.ttf);
         }
 
         body {
