--- a/cenextgent.html
+++ b/cenextgent.html
@@ -10,16 +10,16 @@
         /*font*/
         @font-face {
             font-family: beyonders;
-            src: url(/font/Beyonders.ttf);
+            src: url(./font/Beyonders.ttf);
         }
 
         @font-face {
             font-family: HFWhale;
-            src: url(/font/HFWhale.ttf);
+            src: url(./font/HFWhale.ttf);
         }
         @font-face {
             font-family: Mahuema;
-            src: url(/font/MN\ Mahuema.ttf);
+            src: url(./font/MN\ Mahuema.ttf);
         }
 
         body {
@@ -167,7 +167,7 @@
     <div class="container">
         <div class="topbar">
             <div class="intopbar">
-                <div class="portfolio"><img src="/img/hand.png" alt="cat" width="40" height="40"> Protfolio</div>
+                <div class="portfolio"><img src="./img/hand.png" alt="cat" width="40" height="40"> Protfolio</div>
                 <div class="goto">
                     <a href="./index.html" style="text-decoration: none;" class="a">
                         <div class="goto1">Home</div>
