--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="" href="cssport.css">
     <style>
         /*font*/
         @font-face {
             font-family: beyonders;
-            src: url(/font/Beyonders.ttf);
+            src: url(./font/Beyonders.ttf);
         }
 
         @font-face {
             font-family: HFWhale;
-            src: url(/font/HFWhale.ttf);
+            src: url(./font/HFWhale.ttf);
         }
 
         body {
