--- a/profile.html
+++ b/profile.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>profile</title>
-    <link rel="" href="cssport.css">
+    
     <style>
         /*font*/
         @font-face {
             font-family: beyonders;
-            src: url(/font/Beyonders.ttf);
+            src: url(./font/Beyonders.ttf);
         }
 
         @font-face {
             font-family: HFWhale;
-            src: url(/font/HFWhale.ttf);
+            src: url(./font/HFWhale.ttf);
         }
 
         @font-face {
             font-family: Mahuema;
-            src: url(/font/MN\ Mahuema.ttf);
+            src: url(./font/MN\ Mahuema.ttf);
         }
 
         body {
@@ -290,7 +290,7 @@
     <div class="container">
         <div class="topbar">
             <div class="intopbar">
-                <div class="portfolio"><img src="/img/hand.png" alt="cat" width="40" height="40"> Protfolio</div>
+                <div class="portfolio"><img src="./img/hand.png" alt="cat" width="40" height="40"> Protfolio</div>
                 <div class="goto">
                     <a href="./index.html" style="text-decoration: none;" class="a">
                         <div class="goto1">Home</div>
